examples/3D_Image_Toolkit/klee-out-0/test000001.cvc
model_version0  : ARRAY BITVECTOR(32) OF BITVECTOR(8);
%----------------------------------------------------
ASSERT( ((((0x01 = model_version0[0x00000000]
) AND (0x00 = model_version0[0x00000001]
)
) AND (0x00 = model_version0[0x00000002]
)
) AND (0x00 = model_version0[0x00000003]
)
) );
%----------------------------------------------------
QUERY( FALSE  );
